// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.bisection.config;

option go_package = "go.chromium.org/luci/bisection/proto/config;configpb";

// Config is the service-wide configuration data for LUCI Bisection
message Config {
  // Service-wide configuration data for Gerrit integration
  GerritConfig gerrit_config = 1;
  // Configuration data for analysis
  AnalysisConfig analysis_config = 2;
}

// GerritConfig is the configuration data for Gerrit integration
message GerritConfig {
  // Whether Gerrit API actions are enabled
  bool actions_enabled = 1;

  // Settings for revert-related actions
  message RevertActionSettings {
    // Whether the action is enabled
    bool enabled = 1;

    // The maximum number of times the action can be performed per day
    uint32 daily_limit = 2;
  }

  // Settings for creating reverts for culprit CLs
  RevertActionSettings create_revert_settings = 2;

  // Settings for submitting reverts for culprit CLs
  RevertActionSettings submit_revert_settings = 3;

  // Maximum age of a culprit (sec) for its revert to be eligible
  // for the submit action.
  //
  // The age of a culprit is based on the time since the culprit was merged.
  // If a culprit is older than this limit, LUCI Bisection will skip
  // submitting its corresponding revert.
  int64 max_revertible_culprit_age = 4;

  // Settings for culprit actions for nthsection
  message NthSectionSettings {
    // Whether culprit action for nthsection culprit is enabled
    bool enabled = 1;
    // Whether we should perform actions on nthsection culprits even when
    // culprit verification errored
    bool action_when_verification_error = 2;
  }

  NthSectionSettings nthsection_settings = 5;
}

// GerritConfig is the configuration data for running analysis
message AnalysisConfig {
  // Whether we should run culprit verification
  bool culprit_verification_enabled = 1;

  // Whether we should run nthsection analysis
  bool nthsection_enabled = 2;
}